--- a/machine/Vagrantfile
+++ b/machine/Vagrantfile
@@ -2,7 +2,7 @@
 # vi: set ft=ruby :
 
 IMAGE = "debian/buster64"
-HCOUNT = 3
+HCOUNT = 1
 
 Vagrant.configure("2") do |config|
 
@@ -13,7 +13,9 @@ Vagrant.configure("2") do |config|
       
       # ip starts at [192.168.35.10] - host 1
       host.vm.network "private_network", ip: "192.168.35.#{host_id+9}"
-      host.vm.synced_folder "../data/code", "/home/vagrant/code"
+      host.vm.synced_folder "../data/code", "/home/vagrant/code",
+        type: "rsync", rsync__auto: true,
+        rsync__exclude: ["__pycache__", "env", ".editorconfig"]
 
       host.vm.provider "virtualbox" do |vb|
         vb.gui = false
