--- a/data/code/app/config/node.env
+++ b/data/code/app/config/node.env
@@ -1,4 +1,4 @@
 IS_SUPERNODE=false
 
-SUPERNODE_ENDPOINT=http://10.10.10.10:9000/v1/supernode
+SUPERNODE_ENDPOINT=http://127.0.0.1:5000/api/supernode
 RESOURCE_PATH=/app/resources/
