--- a/machine/Vagrantfile
+++ b/machine/Vagrantfile
@@ -2,20 +2,27 @@
 # vi: set ft=ruby :
 
 IMAGE = "debian/buster64"
+# IMAGE = "ubuntu/focal64"
 HCOUNT = 1
 
 Vagrant.configure("2") do |config|
 
   (1..HCOUNT).each do |host_id| 
     config.vm.define "host-#{host_id}" do |host| 
+      ENV["LC_ALL"] = "en_US.UTF-8"
+
       host.vm.box = IMAGE 
       host.vm.hostname = "host#{host_id}"
       
+      # Enable X forwarding
+      # host.ssh.forward_agent = true
+      # host.ssh.forward_x11 = true
+
       # ip starts at [192.168.35.10] - host 1
       host.vm.network "private_network", ip: "192.168.35.#{host_id+9}"
       host.vm.synced_folder "../data/code", "/home/vagrant/code",
-        type: "rsync", rsync__auto: true,
-        rsync__exclude: ["__pycache__", "env", ".editorconfig"]
+        type: "rsync",
+        rsync__exclude: ["__pycache__", "/env", ".editorconfig"]
 
       host.vm.provider "virtualbox" do |vb|
         vb.gui = false
@@ -25,6 +32,7 @@ Vagrant.configure("2") do |config|
 
       # install needed software and configs
       host.vm.provision "shell", path: "../scripts/boot.sh"
+
 
     end
   end
