--- a/data/code/Makefile
+++ b/data/code/Makefile
@@ -1,10 +1,12 @@
 IP = 127.0.0.1
 PORT = 5000
 GROUP_SIZE = 0
+CONFIG = xx
 
 run: export LHOST=$(IP)
 run: export LPORT=$(PORT)
 run: export MULTICAST_GROUP_SIZE=$(GROUP_SIZE)
+run: export CONFIG_FILE=$(CONFIG)
 run: 
 	@flask run -h $(IP) -p $(PORT)
 
