--- a/machine/Vagrantfile
+++ b/machine/Vagrantfile
@@ -29,6 +29,9 @@ Vagrant.configure("2") do |config|
       # install needed software and configs
       host.vm.provision "shell", path: "../scripts/boot.sh"
 
+      host.vm.provision "shell", path: "../scripts/alias.sh",
+        run: 'always'
+
 
     end
   end
