--- a/.gitignore
+++ b/.gitignore
@@ -299,5 +299,5 @@ Temporary Items
 
 jetty
 jars
-
+.obsidian
 # End of https://www.toptal.com/developers/gitignore/api/java,macos,vagrant,visualstudiocode,python,flask
